azure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wealthmanagement
  labels:
    app: wealthmanagement
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wealthmanagement
  template:
    metadata:
      labels:
        app: wealthmanagement
    spec:
      containers:
      - name: wealthmanagement
        image: apmpacr.azurecr.io/wealthmanagement:v6
        ports:
        - containerPort: 8080
