azure/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealthmanagement-frontend-service
spec:
  selector:
    app: wealthmanagement-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
