azure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wealthmanagement-service
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: wealthmanagementportal
spec:
  selector:
    app: wealthmanagement
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
sessionAffinity: ClientIP
