azure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wealthmanagement-ingress
  namespace: default
  annotations:
    # kubernetes.azure.com/tls-cert-keyvault-uri: https://apmp-kv.vault.azure.net/certificates/wealthmanagement-cert
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: wealthmanagementportal.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wealthmanagement-frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: wealthmanagement-service
            port:
              number: 80
  tls:
  - hosts:
    - wealthmanagementportal.eastus.cloudapp.azure.com
    secretName: wealthmanagement-tls-secret
